--- a/Project_2.ipynb
+++ b/Project_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
        "[5 rows x 231 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "(77, 231)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
        "[5 rows x 149 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "4  Auburn Gresham    324    862  44435    143    514"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
        "       ['Woodlawn', 2051, 695, 19279, 711, 532]], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
        "4  Auburn Gresham    324    862  44435    143    514"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1039,7 @@
        "24            Buena Park         60613, 60640"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1423,7 +1423,7 @@
        "53           Union Ridge                60656"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1434,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1501,7 +1501,7 @@
        "4            Bucktown  60614, 60622, 60647"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1513,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1580,7 +1580,7 @@
        "5              DePaul                60614"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1592,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1603,7 +1603,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1614,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1675,7 +1675,7 @@
        "       ['Union Ridge', '60656']], dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1686,7 +1686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2366,7 +2366,7 @@
        "52                60656  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2378,7 +2378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2387,7 +2387,7 @@
        "['zip', 'ethnicity', 'restaurants', 'mergedData', 'mergedData2']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2400,11 +2400,353 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "mergedHoodZip.to_csv(\"NaNData.csv\", index = False, header = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Neighborhood</th>\n",
+       "      <th>WHITE</th>\n",
+       "      <th>HISP</th>\n",
+       "      <th>BLACK</th>\n",
+       "      <th>ASIAN</th>\n",
+       "      <th>OTHER</th>\n",
+       "      <th>Zip</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Albany Park</td>\n",
+       "      <td>15608</td>\n",
+       "      <td>24927</td>\n",
+       "      <td>2401</td>\n",
+       "      <td>7536</td>\n",
+       "      <td>1520</td>\n",
+       "      <td>60625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Edgewater</td>\n",
+       "      <td>30785</td>\n",
+       "      <td>9326</td>\n",
+       "      <td>7446</td>\n",
+       "      <td>6579</td>\n",
+       "      <td>1829</td>\n",
+       "      <td>60640, 60660</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Edison Park</td>\n",
+       "      <td>9599</td>\n",
+       "      <td>1201</td>\n",
+       "      <td>194</td>\n",
+       "      <td>309</td>\n",
+       "      <td>301</td>\n",
+       "      <td>60631</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Forest Glen</td>\n",
+       "      <td>13444</td>\n",
+       "      <td>2613</td>\n",
+       "      <td>188</td>\n",
+       "      <td>2395</td>\n",
+       "      <td>378</td>\n",
+       "      <td>60630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Irving Park</td>\n",
+       "      <td>22786</td>\n",
+       "      <td>23704</td>\n",
+       "      <td>1479</td>\n",
+       "      <td>4786</td>\n",
+       "      <td>1851</td>\n",
+       "      <td>60618</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>Jefferson Park</td>\n",
+       "      <td>17522</td>\n",
+       "      <td>5948</td>\n",
+       "      <td>236</td>\n",
+       "      <td>2476</td>\n",
+       "      <td>626</td>\n",
+       "      <td>60630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>Lincoln Park</td>\n",
+       "      <td>53512</td>\n",
+       "      <td>4446</td>\n",
+       "      <td>3206</td>\n",
+       "      <td>4653</td>\n",
+       "      <td>1893</td>\n",
+       "      <td>60610, 60614</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>Lincoln Square</td>\n",
+       "      <td>26782</td>\n",
+       "      <td>6978</td>\n",
+       "      <td>1594</td>\n",
+       "      <td>4650</td>\n",
+       "      <td>1711</td>\n",
+       "      <td>60625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>North Center</td>\n",
+       "      <td>27568</td>\n",
+       "      <td>4192</td>\n",
+       "      <td>668</td>\n",
+       "      <td>1791</td>\n",
+       "      <td>1570</td>\n",
+       "      <td>60613, 60618</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>North Park</td>\n",
+       "      <td>9789</td>\n",
+       "      <td>3154</td>\n",
+       "      <td>541</td>\n",
+       "      <td>4703</td>\n",
+       "      <td>655</td>\n",
+       "      <td>60625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>Norwood Park</td>\n",
+       "      <td>30218</td>\n",
+       "      <td>4377</td>\n",
+       "      <td>165</td>\n",
+       "      <td>1231</td>\n",
+       "      <td>1098</td>\n",
+       "      <td>60631</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>Portage Park</td>\n",
+       "      <td>32324</td>\n",
+       "      <td>26215</td>\n",
+       "      <td>901</td>\n",
+       "      <td>3260</td>\n",
+       "      <td>1607</td>\n",
+       "      <td>60634, 60641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>Uptown</td>\n",
+       "      <td>31602</td>\n",
+       "      <td>8324</td>\n",
+       "      <td>10487</td>\n",
+       "      <td>5812</td>\n",
+       "      <td>1748</td>\n",
+       "      <td>60640</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13</td>\n",
+       "      <td>West Ridge</td>\n",
+       "      <td>32173</td>\n",
+       "      <td>14256</td>\n",
+       "      <td>9201</td>\n",
+       "      <td>17200</td>\n",
+       "      <td>3385</td>\n",
+       "      <td>60645, 60659</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Neighborhood  WHITE   HISP  BLACK  ASIAN  OTHER           Zip\n",
+       "0      Albany Park  15608  24927   2401   7536   1520         60625\n",
+       "1        Edgewater  30785   9326   7446   6579   1829  60640, 60660\n",
+       "2      Edison Park   9599   1201    194    309    301         60631\n",
+       "3      Forest Glen  13444   2613    188   2395    378         60630\n",
+       "4      Irving Park  22786  23704   1479   4786   1851         60618\n",
+       "5   Jefferson Park  17522   5948    236   2476    626         60630\n",
+       "6     Lincoln Park  53512   4446   3206   4653   1893  60610, 60614\n",
+       "7   Lincoln Square  26782   6978   1594   4650   1711         60625\n",
+       "8     North Center  27568   4192    668   1791   1570  60613, 60618\n",
+       "9       North Park   9789   3154    541   4703    655         60625\n",
+       "10    Norwood Park  30218   4377    165   1231   1098         60631\n",
+       "11    Portage Park  32324  26215    901   3260   1607  60634, 60641\n",
+       "12          Uptown  31602   8324  10487   5812   1748         60640\n",
+       "13      West Ridge  32173  14256   9201  17200   3385  60645, 60659"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mergedHoodZip2 = pd.merge(ethnicityDF, zipDF, how = 'inner')\n",
+    "mergedHoodZip2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0            60625\n",
+       "1     60640, 60660\n",
+       "2            60631\n",
+       "3            60630\n",
+       "4            60618\n",
+       "5            60630\n",
+       "6     60610, 60614\n",
+       "7            60625\n",
+       "8     60613, 60618\n",
+       "9            60625\n",
+       "10           60631\n",
+       "11    60634, 60641\n",
+       "12           60640\n",
+       "13    60645, 60659\n",
+       "Name: Zip, dtype: object"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mergedHoodZip2['Zip']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mergedHoodZip2['Zip'].to_csv('zipCodes.csv', index = False, header = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Neighborhood', 'WHITE', 'HISP', 'BLACK', 'ASIAN', 'OTHER'], dtype='object')"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ethnicityDF.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Neighborhood', 'Zip'], dtype='object')"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zipDF.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Neighborhood', 'WHITE', 'HISP', 'BLACK', 'ASIAN', 'OTHER', 'Zip'], dtype='object')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mergedHoodZip.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Neighborhood', 'WHITE', 'HISP', 'BLACK', 'ASIAN', 'OTHER', 'Zip'], dtype='object')"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mergedHoodZip2.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mergedHoodZip2.to_csv('./SQLData/importSQLmerged1.csv', index = False, header = False)\n",
+    "ethnicityDF.to_csv('./SQLData/importSQLethnicity.csv', index = False, header = False)\n",
+    "zipDF.to_csv('./SQLData/importSQLzip.csv', index = False, header = False)"
    ]
   },
   {
