--- a/Project_2.ipynb
+++ b/Project_2.ipynb
@@ -2740,13 +2740,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mergedHoodZip2.to_csv('./SQLData/importSQLmerged1.csv', index = False, header = False)\n",
-    "ethnicityDF.to_csv('./SQLData/importSQLethnicity.csv', index = False, header = False)\n",
-    "zipDF.to_csv('./SQLData/importSQLzip.csv', index = False, header = False)"
+    "mergedHoodZip2.to_csv('./SQLData/importSQLmerged1.csv', index = False, header = True)\n",
+    "ethnicityDF.to_csv('./SQLData/importSQLethnicity.csv', index = False, header = True)\n",
+    "zipDF.to_csv('./SQLData/importSQLzip.csv', index = False, header = True)"
    ]
   },
   {
